--- a/fronted/projects/vs-2019/ZipTool.ui
+++ b/fronted/projects/vs-2019/ZipTool.ui
@@ -45,6 +45,25 @@
      <height>291</height>
     </rect>
    </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnSaveContent">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>130</y>
+     <width>101</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Save Content</string>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
